adjust to golang 1.20
